Swagger doc for words
