# routes/api.php
@@ -24,9 +24,9 @@ Route::post('register', 'Auth\RegisterController@register');
 Route::group(['middleware' => 'auth:api'], function () {
     Route::post('logout', 'Auth\LoginController@logout');
 
-    Route::get('words', 'WordController@index');
+//    Route::get('words', 'WordController@index');
     Route::get('words/{word}', 'WordController@show');
-    Route::post('words', 'WordController@store');
+//    Route::post('words', 'WordController@store');
     Route::post('words/search', 'WordController@search');
     Route::put('words/{word}', 'WordController@update');
     Route::delete('words/{word}', 'WordController@delete');
